--- a/requirements.txt
+++ b/requirements.txt
@@ -15,3 +15,9 @@ pandas==0.24.1
 pandocfilters==1.4.2
 scipy==1.2.0
 seaborn==0.9.0
+muselsl==2.0.2
+tensorboard==1.8.0
+tensorflow==1.8.0
+tensorflow-tensorboard==0.1.8
+scikit-learn==0.19.1
+pylsl==1.13.1
